package com.example.levhazahav;

import androidx.appcompat.app.AppCompatActivity;

import android.os.Bundle;

public class activity_eld_house_view extends AppCompatActivity {

    @Override
    protected void onCreate(Bundle savedInstanceState) {
        super.onCreate(savedInstanceState);
        setContentView(R.layout.activity_eld_house_view);
    }
}